--- a/p8105_hw5_tbd2117.md
+++ b/p8105_hw5_tbd2117.md
@@ -23,3 +23,17 @@ scale_fill_discrete = scale_fill_viridis_d
 ```
 
 ### Problem 1
+
+Loading homicide data and adjusting `report_date` variable
+
+``` r
+homicide = 
+  read_csv("./data/homicide-data.csv") %>% 
+  separate(reported_date, into = c("year", "month", "day"), sep = c(4, 6))
+
+view(homicide)
+```
+
+The `homicide` dataset has 52179 rows and 14 columns with data on
+homicides in 50 large U.S. cities gathered be *The Washington Post* from
+2007 to 2017.
