after finishing problem 2

--- a/p8105_hw5_tbd2117.Rmd
+++ b/p8105_hw5_tbd2117.Rmd
@@ -95,21 +95,45 @@ city_results %>%
 
 ## Problem 2
 
-```{r}
-data1 = read_csv("./data/long_data/con_01.csv")
+Creating tidy dataset:
 
-path_df = 
+```{r, message = FALSE}
+long_df = 
   tibble(
     path = list.files("./data/long_data")
   ) %>% 
   mutate(path = str_c("./data/long_data/",path),
   data = map(path, read_csv)) %>% 
-  unnest(data)
-
-
-# pivot
+  unnest(data) %>% 
+  mutate(
+    arm = case_when(
+             str_detect(path, "con") ~ "control",
+             str_detect(path, "exp") ~ "experimental"
+          ),
+    id = str_extract(path, "[0-9][0-9]")
+  ) %>% 
+  select(id, arm, week_1:week_8) %>% 
+  pivot_longer(
+    week_1:week_8, 
+    names_to = "week",
+    values_to = "observation"
+  ) %>% 
+  mutate(
+    week = as.numeric(str_sub(week, -1))
+  )
 ```
 
+Spaghetti plot:
+
+```{r}
+long_df %>% 
+  group_by(id, arm) %>% 
+  ggplot(aes(x = week, y = observation, color = id))+
+  geom_line()+
+  facet_grid(. ~ arm)
+```
+
+Observations in the _experimental_ arm seem to increase over time while observations in the _control_ arm stay roughly the same.
 
 ## Problem 3
 
