--- a/p8105_hw5_tbd2117.md
+++ b/p8105_hw5_tbd2117.md
@@ -105,255 +105,47 @@ city_results %>%
 
 ## Problem 2
 
-``` r
-data1 = read_csv("./data/long_data/con_01.csv")
-```
-
-    ## Parsed with column specification:
-    ## cols(
-    ##   week_1 = col_double(),
-    ##   week_2 = col_double(),
-    ##   week_3 = col_double(),
-    ##   week_4 = col_double(),
-    ##   week_5 = col_double(),
-    ##   week_6 = col_double(),
-    ##   week_7 = col_double(),
-    ##   week_8 = col_double()
-    ## )
+Creating tidy dataset:
 
 ``` r
-path_df = 
+long_df = 
   tibble(
     path = list.files("./data/long_data")
   ) %>% 
   mutate(path = str_c("./data/long_data/",path),
   data = map(path, read_csv)) %>% 
-  unnest(data)
+  unnest(data) %>% 
+  mutate(
+    arm = case_when(
+             str_detect(path, "con") ~ "control",
+             str_detect(path, "exp") ~ "experimental"
+          ),
+    id = str_extract(path, "[0-9][0-9]")
+  ) %>% 
+  select(id, arm, week_1:week_8) %>% 
+  pivot_longer(
+    week_1:week_8, 
+    names_to = "week",
+    values_to = "observation"
+  ) %>% 
+  mutate(
+    week = as.numeric(str_sub(week, -1))
+  )
 ```
 
-    ## Parsed with column specification:
-    ## cols(
-    ##   week_1 = col_double(),
-    ##   week_2 = col_double(),
-    ##   week_3 = col_double(),
-    ##   week_4 = col_double(),
-    ##   week_5 = col_double(),
-    ##   week_6 = col_double(),
-    ##   week_7 = col_double(),
-    ##   week_8 = col_double()
-    ## )
-    ## Parsed with column specification:
-    ## cols(
-    ##   week_1 = col_double(),
-    ##   week_2 = col_double(),
-    ##   week_3 = col_double(),
-    ##   week_4 = col_double(),
-    ##   week_5 = col_double(),
-    ##   week_6 = col_double(),
-    ##   week_7 = col_double(),
-    ##   week_8 = col_double()
-    ## )
-    ## Parsed with column specification:
-    ## cols(
-    ##   week_1 = col_double(),
-    ##   week_2 = col_double(),
-    ##   week_3 = col_double(),
-    ##   week_4 = col_double(),
-    ##   week_5 = col_double(),
-    ##   week_6 = col_double(),
-    ##   week_7 = col_double(),
-    ##   week_8 = col_double()
-    ## )
-    ## Parsed with column specification:
-    ## cols(
-    ##   week_1 = col_double(),
-    ##   week_2 = col_double(),
-    ##   week_3 = col_double(),
-    ##   week_4 = col_double(),
-    ##   week_5 = col_double(),
-    ##   week_6 = col_double(),
-    ##   week_7 = col_double(),
-    ##   week_8 = col_double()
-    ## )
-    ## Parsed with column specification:
-    ## cols(
-    ##   week_1 = col_double(),
-    ##   week_2 = col_double(),
-    ##   week_3 = col_double(),
-    ##   week_4 = col_double(),
-    ##   week_5 = col_double(),
-    ##   week_6 = col_double(),
-    ##   week_7 = col_double(),
-    ##   week_8 = col_double()
-    ## )
-    ## Parsed with column specification:
-    ## cols(
-    ##   week_1 = col_double(),
-    ##   week_2 = col_double(),
-    ##   week_3 = col_double(),
-    ##   week_4 = col_double(),
-    ##   week_5 = col_double(),
-    ##   week_6 = col_double(),
-    ##   week_7 = col_double(),
-    ##   week_8 = col_double()
-    ## )
-    ## Parsed with column specification:
-    ## cols(
-    ##   week_1 = col_double(),
-    ##   week_2 = col_double(),
-    ##   week_3 = col_double(),
-    ##   week_4 = col_double(),
-    ##   week_5 = col_double(),
-    ##   week_6 = col_double(),
-    ##   week_7 = col_double(),
-    ##   week_8 = col_double()
-    ## )
-    ## Parsed with column specification:
-    ## cols(
-    ##   week_1 = col_double(),
-    ##   week_2 = col_double(),
-    ##   week_3 = col_double(),
-    ##   week_4 = col_double(),
-    ##   week_5 = col_double(),
-    ##   week_6 = col_double(),
-    ##   week_7 = col_double(),
-    ##   week_8 = col_double()
-    ## )
-    ## Parsed with column specification:
-    ## cols(
-    ##   week_1 = col_double(),
-    ##   week_2 = col_double(),
-    ##   week_3 = col_double(),
-    ##   week_4 = col_double(),
-    ##   week_5 = col_double(),
-    ##   week_6 = col_double(),
-    ##   week_7 = col_double(),
-    ##   week_8 = col_double()
-    ## )
-    ## Parsed with column specification:
-    ## cols(
-    ##   week_1 = col_double(),
-    ##   week_2 = col_double(),
-    ##   week_3 = col_double(),
-    ##   week_4 = col_double(),
-    ##   week_5 = col_double(),
-    ##   week_6 = col_double(),
-    ##   week_7 = col_double(),
-    ##   week_8 = col_double()
-    ## )
-    ## Parsed with column specification:
-    ## cols(
-    ##   week_1 = col_double(),
-    ##   week_2 = col_double(),
-    ##   week_3 = col_double(),
-    ##   week_4 = col_double(),
-    ##   week_5 = col_double(),
-    ##   week_6 = col_double(),
-    ##   week_7 = col_double(),
-    ##   week_8 = col_double()
-    ## )
-    ## Parsed with column specification:
-    ## cols(
-    ##   week_1 = col_double(),
-    ##   week_2 = col_double(),
-    ##   week_3 = col_double(),
-    ##   week_4 = col_double(),
-    ##   week_5 = col_double(),
-    ##   week_6 = col_double(),
-    ##   week_7 = col_double(),
-    ##   week_8 = col_double()
-    ## )
-    ## Parsed with column specification:
-    ## cols(
-    ##   week_1 = col_double(),
-    ##   week_2 = col_double(),
-    ##   week_3 = col_double(),
-    ##   week_4 = col_double(),
-    ##   week_5 = col_double(),
-    ##   week_6 = col_double(),
-    ##   week_7 = col_double(),
-    ##   week_8 = col_double()
-    ## )
-    ## Parsed with column specification:
-    ## cols(
-    ##   week_1 = col_double(),
-    ##   week_2 = col_double(),
-    ##   week_3 = col_double(),
-    ##   week_4 = col_double(),
-    ##   week_5 = col_double(),
-    ##   week_6 = col_double(),
-    ##   week_7 = col_double(),
-    ##   week_8 = col_double()
-    ## )
-    ## Parsed with column specification:
-    ## cols(
-    ##   week_1 = col_double(),
-    ##   week_2 = col_double(),
-    ##   week_3 = col_double(),
-    ##   week_4 = col_double(),
-    ##   week_5 = col_double(),
-    ##   week_6 = col_double(),
-    ##   week_7 = col_double(),
-    ##   week_8 = col_double()
-    ## )
-    ## Parsed with column specification:
-    ## cols(
-    ##   week_1 = col_double(),
-    ##   week_2 = col_double(),
-    ##   week_3 = col_double(),
-    ##   week_4 = col_double(),
-    ##   week_5 = col_double(),
-    ##   week_6 = col_double(),
-    ##   week_7 = col_double(),
-    ##   week_8 = col_double()
-    ## )
-    ## Parsed with column specification:
-    ## cols(
-    ##   week_1 = col_double(),
-    ##   week_2 = col_double(),
-    ##   week_3 = col_double(),
-    ##   week_4 = col_double(),
-    ##   week_5 = col_double(),
-    ##   week_6 = col_double(),
-    ##   week_7 = col_double(),
-    ##   week_8 = col_double()
-    ## )
-    ## Parsed with column specification:
-    ## cols(
-    ##   week_1 = col_double(),
-    ##   week_2 = col_double(),
-    ##   week_3 = col_double(),
-    ##   week_4 = col_double(),
-    ##   week_5 = col_double(),
-    ##   week_6 = col_double(),
-    ##   week_7 = col_double(),
-    ##   week_8 = col_double()
-    ## )
-    ## Parsed with column specification:
-    ## cols(
-    ##   week_1 = col_double(),
-    ##   week_2 = col_double(),
-    ##   week_3 = col_double(),
-    ##   week_4 = col_double(),
-    ##   week_5 = col_double(),
-    ##   week_6 = col_double(),
-    ##   week_7 = col_double(),
-    ##   week_8 = col_double()
-    ## )
-    ## Parsed with column specification:
-    ## cols(
-    ##   week_1 = col_double(),
-    ##   week_2 = col_double(),
-    ##   week_3 = col_double(),
-    ##   week_4 = col_double(),
-    ##   week_5 = col_double(),
-    ##   week_6 = col_double(),
-    ##   week_7 = col_double(),
-    ##   week_8 = col_double()
-    ## )
+Spaghetti plot:
 
 ``` r
-# pivot
+long_df %>% 
+  group_by(id, arm) %>% 
+  ggplot(aes(x = week, y = observation, color = id))+
+  geom_line()+
+  facet_grid(. ~ arm)
 ```
+
+<img src="p8105_hw5_tbd2117_files/figure-gfm/unnamed-chunk-8-1.png" width="90%" />
+
+Observations in the *experimental* arm seem to increase over time while
+observations in the *control* arm stay roughly the same.
 
 ## Problem 3
