--- a/p8105_hw5_tbd2117.Rmd
+++ b/p8105_hw5_tbd2117.Rmd
@@ -22,6 +22,8 @@ options(
 
 scale_colour_discrete = scale_color_viridis_d
 scale_fill_discrete = scale_fill_viridis_d
+
+set.seed(1)
 ```
 
 ### Problem 1
@@ -137,8 +139,88 @@ Observations in the _experimental_ arm seem to increase over time while observat
 
 ## Problem 3
 
+Estimated mean + p-value for t-tests for each _mu_
 
 ```{r}
+est_p_t = function(x) {
+  
+  sim_data = 
+  tibble(
+    tibble(norm = rerun(5000, rnorm(30, mean = x, sd = 5)))
+  ) %>% 
+      mutate(
+        sim_result = map(.x = norm, ~t.test(.x, mu = 0)),
+        tidy_result = map(.x = sim_result, ~broom::tidy(.x))
+      ) %>% 
+      select(-sim_result) %>% 
+      unnest(tidy_result) %>% 
+      select(estimate, p.value)
+  
+}
 
+output = 
+  map_df(c(0:6), est_p_t, .id = "average") %>% 
+  mutate(average = as.numeric(average) - 1)
 ```
+
+Proportion of rejection of null hypothesis...
+
+```{r}
+output_reject = 
+  output %>% 
+    group_by(average) %>% 
+    mutate(
+      rejection = case_when(
+                        p.value < 0.05  ~ 1,
+                        p.value >= 0.05 ~ 0
+                  )
+    )
+```
+
+#### Plot of Power vs. _mu_
+
+```{r}
+output_reject %>%
+  group_by(average) %>% 
+    summarize(
+      total = n(),
+      rejected = sum(rejection)
+    ) %>% 
+  ggplot(aes(x = average, y = rejected / total))+
+  geom_point()+
+  labs(
+    x = "True Mean",
+    y = "Proportion of time the null was rejected \n(Power)"
+  )
+```
+
+As effect size increases (bigger difference between tru mean and 0 in this case) power increases.
+
+##### Plot of average estimates of ^μ and by μ
+ 
+
+```{r}
+plot_overlay =   
+  output_reject %>%
+  filter(rejection == 1) %>% 
+    mutate(
+      average_est_reject = mean(estimate)
+    )
+
+output_reject %>%
+  group_by(average) %>% 
+    mutate(
+      average_est = mean(estimate)
+    )  %>% 
+  ggplot(aes(x = average, y = average_est))+
+  geom_point(color = "red")+
+  geom_point(data = plot_overlay, aes(x = average, y = average_est_reject), color = "blue")+
+  labs(
+    x = "True Mean",
+    y = "Average estimate of True Mean",
+    caption = "RED = Average estimate of μ \n BLUE = Average estimate of μ only in samples for which the null was rejected"
+  )
+```
+
+The sample average of μ̂ across tests for which the null is rejected
 
